trying to fix Kotlin compiler